# learn-alembic

./: .env.sample  .gitignore  Readme.md  docker-compose.yml  pyproject.toml
database_scripts/: check_health.sh  start_database_service.sh
learn_alembic/: Dockerfile  alembic.ini  function_app.py
learn_alembic/alembic/: README  env.py
learn_alembic/alembic/versions/: 2024_07_16_02_25_d26a94780e43_create_schema.py  2024_07_16_18_03_6078b2d55f8c_add_column.py  2024_09_22_22_55_548bc6f5fc0e_add_bmi_trigger.py  2024_09_22_23_07_97fd35b00145_add_procedure_insert_records.py
