[tool.poetry]
name = "learn-alembic"
version = "0.1.0"
description = "This module is for learning alembic tool."
authors = ["dhvanil-7 <dkprajapati46@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.1"
pyodbc = "^5.1.0"
azure-functions = "^1.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
